# spiritless_po

./: README.md  copyright
.github/workflows/: ci-workflow.yml
include/: spiritless_po.h
include/spiritless_po/: Catalog.h  Common.h  MetadataParser.h  ParseError.h  PluralParser.h  PoParser.h  spiritless_po.h
sample/: dump.cpp  load.cpp  plural_test.cpp
test/: CMakeLists.txt  Catalog.cpp  MetadataParser.cpp  PluralParser.cpp  PoParser.cpp  meson.build
